依功能模組化

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Auto Keyin Test",
+    "name": "Auto Keyin",
     "description": "Auto Keyin data",
     "version": "1.0",
     "manifest_version": 3,
